--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-12">
                 <p class='text-center subjectTitle'>Positioning </p>
-                <p class="text-center subjectSubTitle">Loyalty, Video Messaging, Rich Analytics</p>
+                <p class="text-center subjectSubTitle">Loyalty, Video Messaging, Rich Analytics, Easy to use</p>
                 <p class="text-center subContent">TextJet's platform is designed to give small businesses tools to run
                     dynamic loyalty campaigns, enhanced customer communication with video messaging, and rich analytics
                     to better understand your business. </p>
@@ -141,24 +141,53 @@
         <div class="container">
             <div class="row">
                 <div class="col-9">
-                    <p>Funding Goal</p>
-                </div>
-                <div class="col-3">
-                    <p>FAQ</p>
+                    <p class="subjectTitle2">FAQ</p>
+                    <p class="faqTitle">Why are you priced $80+ cheaper than your competition?</p>
+                    <p class='faqQuestion'>We believe we have an awesome product and we believe the value of
+                        our service well exceeds the $49/mo we charge. The bottom line, we just want to help as many
+                        businesses as possiabe. We believe our price allows us to do that.</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-9">
+                    <p class="faqTitle">Why are building TextJet durring an Pandemic, are you crazy?</p>
+                    <p class='subContent'>A lot of people have asked that. For us, we know a lot of business are goint
+                        to be
+                        struggling to get back to where they were at before Covid-19. We want to be an affordable
+                        resource
+                        that provide big results.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-9">
+                    <p class="faqTitle">Is TextJet touchless loyalty?</p>
+                    <p class='subContent'>We built TextJet to offer touchless loyalty. All you have to do is let the
+                        merchant know the number associated to your loyalty account and you can earn points without
+                        touching a tablet.</p>
+                </div>
+            </div>
+
         </div>
 
 
         <div class="container">
-            <div class="row">
-                <div class="col-12">Founding Team</div>
-            </div>
-            <div class="row">
-                <div class="col-6">Rob</div>
-                <div class="col-6">Vivek</div>
+                <div class="row">
+                    <div class="col-12 subjectTitle2">Founding Team</div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <p class="subContent">Rob Connolly<br>Co-Founder, CEO</p>
+                    <img src="./assets/image/rob.jpg" alt="Rob Image">
+                    </div>
+                    
+                    <div class="col-6">
+                            <p class="subContent">Vivek Parekh<br>Co-Founder, CTO</p>
+                        <img src="./assets/image/vivek.jpg" alt="Vivek Image">
+                        </div>
+                </div>
             </div>
         </div>
+        
 
 </body>
 
