--- a/index.html
+++ b/index.html
@@ -58,12 +58,7 @@
         <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-12">
                 <p class='subjectTitle2'>Product/Service Summary</p>
-                <p class="subContent">TextJet fuses the power of loyalty marketing and video marketing all in one suite.
-                    By giving business owners the ability to send their customers personalized videos right to their
-                    cell phones is a huge opportunity that we believe is being missed. With TextJet we can let a
-                    merchant know that one of their customers had a poor experience. With TextJet, the merchant can send
-                    a personalized video apologizing for the experience and offering remedies to fix the issue. This is
-                    just one of the features that separates TextJet.</p>
+                <p class="subContent">TextJet fuses the power of loyalty marketing and video marketing all in one suite. By giving business owners the ability to send their customers personalized videos right to their cell phones is a huge opportunity that we believe is being missed. With TextJet we can let a merchant know that one of their customers had a poor experience. With TextJet, the merchant can send a personalized video apologizing for the experience and offering remedies to fix the issue. This is just one of the features that separate TextJet.</p>
             </div>
 
 
@@ -94,7 +89,7 @@
                                 that do not help the businesses breakthrough to its customers. On top of the steep price
                                 tags that these loyalty programs demand, they are missing the mark.</p>
                             <li>
-                                Other Services Too Expspensive ($179+/mo)
+                                Other Services Too Expensive ($179+/mo)
                             </li>
                             <li>
                                 No Rich Media Marketing
@@ -143,27 +138,19 @@
                 <div class="col-9">
                     <p class="subjectTitle2">FAQ</p>
                     <p class="faqTitle">Why are you priced $80+ cheaper than your competition?</p>
-                    <p class='faqQuestion'>We believe we have an awesome product and we believe the value of
-                        our service well exceeds the $49/mo we charge. The bottom line, we just want to help as many
-                        businesses as possiabe. We believe our price allows us to do that.</p>
+                    <p class='faqQuestion'>We believe we have an awesome product and we believe the value of our service well exceeds the $49/mo we charge. The bottom line, we just want to help as many businesses as possible. We believe our price allows us to do that.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-9">
-                    <p class="faqTitle">Why are building TextJet durring an Pandemic, are you crazy?</p>
-                    <p class='subContent'>A lot of people have asked that. For us, we know a lot of business are goint
-                        to be
-                        struggling to get back to where they were at before Covid-19. We want to be an affordable
-                        resource
-                        that provide big results.</p>
+                    <p class="faqTitle">Why are building TextJet during a Pandemic, are you crazy?  </p>
+                    <p class='subContent'>A lot of people have asked that. For us, we know a lot of businesses are going to be struggling to get back to where they were before Covid-19. We want to be an affordable resource that provides big results.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-9">
                     <p class="faqTitle">Is TextJet touchless loyalty?</p>
-                    <p class='subContent'>We built TextJet to offer touchless loyalty. All you have to do is let the
-                        merchant know the number associated to your loyalty account and you can earn points without
-                        touching a tablet.</p>
+                    <p class='subContent'>We built TextJet to offer touchless loyalty. All you have to do is let the merchant know the number associated with your loyalty account and you can earn points without touching a tablet.</p>
                 </div>
             </div>
 
