--- a/index.html
+++ b/index.html
@@ -13,19 +13,6 @@
 
 <body>
 
-
-    <!-- non background image
-    <div class="container-fluid w-100 h-auto m-0 p-0">
-        <div class="row">
-            <div class="col-12">
-                <img src="./assets/image/1page-hero-image.jpg" class="img-fluid w-100 h-auto p-0 m-0"
-                    alt="responsive image">
-
-            </div>
-        </div>
-    </div>
--->
-
     <div class="container-fluid bg-img">
         <div class="row">
             <div class="col-12">
@@ -45,9 +32,8 @@
             <div class="col-12">
                 <p class='text-center subjectTitle'>Positioning </p>
                 <p class="text-center subjectSubTitle">Loyalty, Video Messaging, Rich Analytics, Easy to use</p>
-                <p class="text-center subContent">TextJet's platform is designed to give small businesses tools to run
-                    dynamic loyalty campaigns, enhanced customer communication with video messaging, and rich analytics
-                    to better understand your business. </p>
+                <p class="text-center subContent">TextJet's platform is designed to give small businesses the tools they need to run
+                    dynamic loyalty campaigns, enhance their customer communication through video messaging and sms, and provide a deeper understanding of the health of their business through rich analytics.</p>
             </div>
         </div>
     </div>
