--- a/index.html
+++ b/index.html
@@ -161,7 +161,17 @@
             </div>
         </div>
         
+        <div class="col-md-12 col-lg-6">
+                <p class='subjectTitle2'>Contact Us</p>
+                <p class='subContent'>
+                    TexJet<br>
+                    3913 30th St,<br>
+                    San Diego, CA 92104<br>
+                    </p>
+                    <p>info@textjet.com</p>
+                </li>
 
+            </div>
 </body>
 
 </html>
