--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2 class="text-center heroSubText">In-Store loyalty platform with video messaging and dynamic marketing
                     autopilot.</h2>
 
-                <p class='text-center heroSubTextLink'>www.TextJet.com</p>
+                <p class='text-center heroSubTextLink'><a href="https://textjet.com"> www.TextJet.com</p></a>
             </div>
         </div>
     </div>
