--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2 class="text-center heroSubText">In-Store loyalty platform with video messaging and dynamic marketing
                     autopilot.</h2>
 
-                <p class='text-center heroSubTextLink'><a href="https://textjet.com"> www.TextJet.com</p></a>
+                <p class='text-center heroSubTextLink'><a href="https://textjet.com" class="tjLink"> www.TextJet.com</p></a>
             </div>
         </div>
     </div>
@@ -149,12 +149,12 @@
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <p class="subContent">Rob Connolly<br>Co-Founder, CEO<br><a href="https://linkedin.com/in/grobconnolly">LinkedIn</a></p>
+                        <p class="subContent">Rob Connolly<br>Co-Founder, CEO<br><a href="https://linkedin.com/in/grobconnolly" class="linkedinLink">LinkedIn</a></p>
                     <img src="./assets/image/rob.jpg" alt="Rob Image">
                     </div>
                     
                     <div class="col-6">
-                            <p class="subContent">Vivek Parekh<br>Co-Founder, CTO<br><a href="https://www.linkedin.com/in/vivekparekh">LinkedIn</a></p>
+                            <p class="subContent">Vivek Parekh<br>Co-Founder, CTO<br><a href="https://www.linkedin.com/in/vivekparekh" class="linkedinLink">LinkedIn</a></p>
                         <img src="./assets/image/vivek.jpg" alt="Vivek Image">
                         </div>
                 </div>
