--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <img src="assets/image/plane_logo-white.png" class="textjetLogo">
                 <h1 class="text-center heroText">TextJet</h1>
 
-                <h2 class="text-center heroSubText">In-Store loyalty platform with video messaging and dynamic marketing
-                    autopilot.</h2>
+                <h2 class="text-center heroSubText">In-Store loyalty platform with video messaging and marketing autopilot.</h2>
 
                 <p class='text-center heroSubTextLink'><a href="https://textjet.com" class="tjLink"> www.TextJet.com</p></a>
             </div>
@@ -31,7 +30,7 @@
         <div class="row">
             <div class="col-12">
                 <p class='text-center subjectTitle'>Positioning </p>
-                <p class="text-center subjectSubTitle">Loyalty, Video Messaging, Rich Analytics, Easy to use</p>
+                <p class="text-center subjectSubTitle">Loyalty, Video Messaging, Rich Analytics, Affordable.</p>
                 <p class="text-center subContent">TextJet's platform is designed to give small businesses the tools they need to run
                     dynamic loyalty campaigns, enhance their customer communication through video messaging and sms, and provide a deeper understanding of the health of their business through rich analytics.</p>
             </div>
@@ -103,10 +102,10 @@
                                 Personal Video Messaging
                             </li>
                             <li>
-                                Marketing Autopilot
+                                Marketing Autopilot with SmartRetention.
                             </li>
                             <li>
-                                SmartPulse Customer Satisfaction
+                                SmartPulse Customer Satisfaction Suite.
                             </li>
                             <li>
                                 Top-Rated Customer Service
