--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="row">
             <div class="col-12">
                 <p class='text-center subjectTitle'>Positioning </p>
-                <p class="text-center subjectSubTitle">Loyalty, Video Messaging, Rich Analytics, Affordable.</p>
-                <p class="text-center subContent">TextJet's platform is designed to give small businesses the tools they need to run
-                    dynamic loyalty campaigns, enhance their customer communication through video messaging and sms, and provide a deeper understanding of the health of their business through rich analytics.</p>
+                <p class="text-center subjectSubTitle">Loyalty Marketing, Video Messaging, Marketing Autopilot, Affordable.</p>
+                <p class="text-center subContent">TextJet's platform is designed to give small businesses all the tools they need to run
+                    dynamic loyalty campaigns, enhance their customer communication through rich messaging, and provide a deeper understanding of the health of their business through rich analytics.</p>
             </div>
         </div>
     </div>
