--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <p class="faqTitle">Why are building TextJet during a Pandemic, are you crazy?  </p>
+                    <p class="faqTitle">Why are we building TextJet during a Pandemic; are you crazy?  </p>
                     <p class='subContent'>A lot of people have asked that. For us, we know a lot of businesses are going to be struggling to get back to where they were before Covid-19. We want to be an affordable resource that provides big results.</p>
                 </div>
             </div>
