--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 customer satisfaction, loyalty rewards, and marketing autopilot are just a few of the
                                 features that set TextJet apart.</p>
                             <li>
-                                Everything Plan $49/mo
+                                Everything Plan $59/mo
                             </li>
                             <li>
                                 Personal Video Messaging
@@ -123,7 +123,7 @@
                 <div class="col-12">
                     <p class="subjectTitle2">FAQ</p>
                     <p class="faqTitle">Why are you priced $80+ cheaper than your competition?</p>
-                    <p class='faqQuestion'>We believe we have an awesome product and we believe the value of our service well exceeds the $49/mo we charge. The bottom line, we just want to help as many businesses as possible. We believe our price allows us to do that.</p>
+                    <p class='faqQuestion'>We believe we have an awesome product and we believe the value of our service well exceeds the $59/mo we charge. The bottom line, we just want to help as many businesses as possible. We believe our price allows us to do that.</p>
                 </div>
             </div>
             <div class="row">
@@ -169,6 +169,17 @@
                     <a href="mailto:onepager@textjet.com">Email Us</a>
 
             </div>
+
+            <script>
+                window.intercomSettings = {
+                  app_id: "incp632k"
+                };
+              </script>
+              
+              <script>
+              // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/incp632k'
+              (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/incp632k';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+              </script>
 </body>
 
 </html>
