--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="assets/image/plane_logo-white.png" class="textjetLogo">
                 <h1 class="text-center heroText">TextJet</h1>
 
-                <h2 class="text-center heroSubText">In-Store loyalty platform with rich messaging and marketing autopilot.</h2>
+                <h2 class="text-center heroSubText">In-store loyalty simplified, with video messaging and marketing autopilot.</h2>
 
                 <p class='text-center heroSubTextLink'><a href="https://textjet.com" class="tjLink"> www.TextJet.com</p></a>
             </div>
