--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 Other Services Too Expensive ($179+/mo)
                             </li>
                             <li>
-                                No Rich Media Marketing
+                                No Rich Messaging
                             </li>
                             <li>
                                 Hard to use
